{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 18,
  "lineage": "a7eb9510-5fef-7154-6640-59de67a8bab3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f85684b39fdb5a0",
            "domain": "vpc",
            "id": "eipalloc-00f85684b39fdb5a0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-210-118-230.compute-1.amazonaws.com",
            "public_ip": "18.210.118.230",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dp-eip-tf"
            },
            "tags_all": {
              "Name": "dp-eip-tf"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614545858828:internet-gateway/igw-0bfd71ac50b9d8a96",
            "id": "igw-0bfd71ac50b9d8a96",
            "owner_id": "614545858828",
            "tags": {
              "Name": "igw-tf"
            },
            "tags_all": {
              "Name": "igw-tf"
            },
            "vpc_id": "vpc-0fa7149d90fbe31e4"
          },
          "dependencies": [
            "aws_vpc.main_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f85684b39fdb5a0",
            "connectivity_type": "public",
            "id": "nat-079cbaaef8eee67f6",
            "network_interface_id": "eni-009bc293cb77f31ec",
            "private_ip": "10.0.1.76",
            "public_ip": "18.210.118.230",
            "subnet_id": "subnet-0b2580e3d4bff5594",
            "tags": {
              "Name": "ngw-tf"
            },
            "tags_all": {
              "Name": "ngw-tf"
            }
          },
          "dependencies": [
            "aws_eip.eip-tf",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.main_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-assoc-wf-priv-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a8903b7951a6c7b11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-079cbaaef8eee67f6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a8903b7951a6c7b1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-tf",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private-route-table",
            "aws_subnet.public_subnet",
            "aws_vpc.main_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614545858828:route-table/rtb-0a8903b7951a6c7b1",
            "id": "rtb-0a8903b7951a6c7b1",
            "owner_id": "614545858828",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fa7149d90fbe31e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614545858828:route-table/rtb-0557235dafd64aabd",
            "id": "rtb-0557235dafd64aabd",
            "owner_id": "614545858828",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bfd71ac50b9d8a96",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt-tf"
            },
            "tags_all": {
              "Name": "public-rt-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa7149d90fbe31e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-sub-1-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a963d3ebf3b02b69",
            "route_table_id": "rtb-0a8903b7951a6c7b1",
            "subnet_id": "subnet-05fa1ad1a5dc2b474"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private_subnet",
            "aws_vpc.main_tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cb09f569eb350d8",
            "route_table_id": "rtb-0a8903b7951a6c7b1",
            "subnet_id": "subnet-0e3cf9066174a6d1a"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private_subnet",
            "aws_vpc.main_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-sub-2-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a963d3ebf3b02b69",
            "route_table_id": "rtb-0a8903b7951a6c7b1",
            "subnet_id": "subnet-05fa1ad1a5dc2b474"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private_subnet",
            "aws_vpc.main_tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cb09f569eb350d8",
            "route_table_id": "rtb-0a8903b7951a6c7b1",
            "subnet_id": "subnet-0e3cf9066174a6d1a"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private_subnet",
            "aws_vpc.main_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-sub-1-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06120d8594f66a104",
            "route_table_id": "rtb-0557235dafd64aabd",
            "subnet_id": "subnet-0b2580e3d4bff5594"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route-table",
            "aws_subnet.public_subnet",
            "aws_vpc.main_tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0419f3fd130db626d",
            "route_table_id": "rtb-0557235dafd64aabd",
            "subnet_id": "subnet-043e25050ece044fe"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route-table",
            "aws_subnet.public_subnet",
            "aws_vpc.main_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614545858828:subnet/subnet-05fa1ad1a5dc2b474",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fa1ad1a5dc2b474",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614545858828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fa7149d90fbe31e4"
          },
          "dependencies": [
            "aws_vpc.main_tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614545858828:subnet/subnet-0e3cf9066174a6d1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3cf9066174a6d1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614545858828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fa7149d90fbe31e4"
          },
          "dependencies": [
            "aws_vpc.main_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614545858828:subnet/subnet-0b2580e3d4bff5594",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2580e3d4bff5594",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614545858828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fa7149d90fbe31e4"
          },
          "dependencies": [
            "aws_vpc.main_tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614545858828:subnet/subnet-043e25050ece044fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043e25050ece044fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614545858828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fa7149d90fbe31e4"
          },
          "dependencies": [
            "aws_vpc.main_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:614545858828:vpc/vpc-0fa7149d90fbe31e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a9034e7bf9116d4",
            "default_route_table_id": "rtb-0c03d384d4e2326bd",
            "default_security_group_id": "sg-0a262054986a1bd8b",
            "dhcp_options_id": "dopt-0523796f172d6b9e4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fa7149d90fbe31e4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c03d384d4e2326bd",
            "owner_id": "614545858828"
          }
        }
      ]
    }
  ]
}